# gnome-session

./: .cvsignore  .gitignore  0001-Add-ability-to-perform-actions-after-a-period-of-idl.patch  0001-Fix-SessionIsActive-property.patch  0001-Fix-some-problems-in-the-systemd-code.patch  0001-Fix-use-of-uninitialised-variable-in-get_session_key.patch  0001-Only-support-UPower-0.9.patch  0001-Return-0-on-success.patch  0001-autostart-app-give-ever-app-its-own-journal-id.patch  0001-data-Adjust-to-g-s-d-s-plugin-removals.patch  0001-fail-whale-handle-X-server-dying-before-startup.patch  0001-gsm_manager_get-does-not-return-a-reference.patch  0001-manager-add-bus-daemon-dbus-api-xml-file.patch  0001-tools-Do-not-consider-Gallium-s-softpipe-and-llvmpip.patch  0002-Fix-use-after-free-in-initialize_gio.patch  0002-system-add-api-for-detecting-if-this-is-the-last-ses.patch  0003-client-Prevent-the-GDBusMethodInvocation-from-being-.patch  0003-manager-kill-off-bus-clients-at-log-out.patch  Explicitly-add-lXext-lXau-to-linker-line.patch  Gnome.session  ListenObjs-leak.patch  Makefile  README  add-back-session-name-property.patch  compat-crash.patch  configure.ac  configure.in  drop-set-has-separator.patch  empty-string-leak.patch  escape-comment.patch  fix-crashity-crash-crash.patch  gdk-display-fix.patch  gerror-crash.patch  gnome-authentication-agent.desktop  gnome-session-2.0.5-dithering.patch  gnome-session-2.0.5-login.patch  gnome-session-2.12.0-shaped.patch  gnome-session-2.13.4-no-crashes.patch  gnome-session-2.13.92-user-share.patch  gnome-session-2.15.90-window-manager.patch  (+49 more)
capplet/: gsm-properties-dialog.c  gsp-app.c  main.c  meson.build
data/: Makefile.am  gnome-session.schemas.in.in  hardware-compatibility  meson.build  session-properties.desktop.in  session-properties.desktop.in.in  session-selector.ui
data/icons/: meson.build
gnome-session/: Makefile.am  gsm-autostart-app.c  gsm-client.c  gsm-client.h  gsm-consolekit.c  gsm-consolekit.h  gsm-dbus-client.c  gsm-fail-whale-dialog.c  gsm-logout-dialog.c  gsm-manager.c  (+10 more)
tools/: Makefile.am  gnome-session-selector.c  meson.build
(+26 files in other folders)
